--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
@@ -116,13 +116,13 @@
                 <td>
                     @if (!Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_External, CaseSolutionFields.ExternalLogNote) && !readonlyMode)
                     {
-                        <div id="textExternalOuter" style="width: 100%; height:100%; min-width: 320px; min-height: 200px">
+                        <div id="textExternalOuter" style="width: 100%; height:100%; min-width: 480px; min-height: 200px">
                             @Html.TextAreaFor(model => Model.CaseLog.TextExternal, new { @class = "summernoteexternal" })
                         </div>
                     }
                     else
                     {
-                        <div id="textExternalOuter" style="width: 100%; height:100%; min-width: 320px; min-height: 200px">
+                        <div id="textExternalOuter" style="width: 100%; height:100%; min-width: 480px; min-height: 200px">
                             @Html.TextAreaFor(model => Model.CaseLog.TextExternal, new { @class = "summernoteexternal", @readonly = true })
                         </div>
                     }
@@ -177,13 +177,13 @@ Model.EnableTwoAttachments))
                     <td>
                         @if (!Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, CaseSolutionFields.InternalLogNote) && !readonlyMode)
                         {
-                            <div id="textInternalOuter" style="width: 100%; height:100%; min-width: 320px; min-height: 200px">
+                            <div id="textInternalOuter" style="width: 100%; height:100%; min-width: 480px; min-height: 200px">
                                 @Html.TextAreaFor(model => Model.CaseLog.TextInternal, new { @class = "summernoteinternal" , id = "CaseLog_TextInternal" })
                             </div>
                         }
                         else
                         {
-                            <div id="textInternalOuter" style="width: 100%; height:100%; min-width: 320px; min-height: 200px">
+                            <div id="textInternalOuter" style="width: 100%; height:100%; min-width: 480px; min-height: 200px">
                                 @Html.TextAreaFor(model => Model.CaseLog.TextInternal, new { @class = "summernoteinternal", @readonly = true })
                             </div>
                         }
@@ -340,13 +340,14 @@ Model.EnableTwoAttachments))
                         }
                     </td>
                     <td>
+
                         @if (!Model.IsReadOnly(GlobalEnums.TranslationCaseFields.FinishingDescription, CaseSolutionFields.FinishingDescription) && !readonlyMode)
                         {
-                            @Html.TextAreaFor(model => model.case_.FinishingDescription, new { maxlength = "300" })
+                            @Html.TextAreaFor(model => model.case_.FinishingDescription, new { maxlength = "300", style = "min-width: 460px; min-height: 100px" })
                         }
                         else
                         {
-                            @Html.TextAreaFor(model => model.case_.FinishingDescription, new { maxlength = "300", @readonly = true })
+                            @Html.TextAreaFor(model => model.case_.FinishingDescription, new { maxlength = "300", style="min-width: 400px; min-height: 150px" })
                         }
                     </td>
                 </tr>
