--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
@@ -177,13 +177,13 @@ Model.EnableTwoAttachments))
                     <td>
                         @if (!Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, CaseSolutionFields.InternalLogNote) && !readonlyMode)
                         {
-                            <div id="textInternalOuter" style="width: 100%; height:100%; min-width: 480px; min-height: 200px">
+                            <div id="textInternalOuter" style="width: 100%; height: 100%; min-width: 480px; min-height: 200px;">
                                 @Html.TextAreaFor(model => Model.CaseLog.TextInternal, new { @class = "summernoteinternal" , id = "CaseLog_TextInternal" })
                             </div>
                         }
                         else
                         {
-                            <div id="textInternalOuter" style="width: 100%; height:100%; min-width: 480px; min-height: 200px">
+                            <div id="textInternalOuter" style="width: 100%; height: 100%; min-width: 480px; min-height: 200px;">
                                 @Html.TextAreaFor(model => Model.CaseLog.TextInternal, new { @class = "summernoteinternal", @readonly = true })
                             </div>
                         }
@@ -343,11 +343,11 @@ Model.EnableTwoAttachments))
 
                         @if (!Model.IsReadOnly(GlobalEnums.TranslationCaseFields.FinishingDescription, CaseSolutionFields.FinishingDescription) && !readonlyMode)
                         {
-                            @Html.TextAreaFor(model => model.case_.FinishingDescription, new { maxlength = "300", style = "min-width: 460px; min-height: 100px" })
+                            @Html.TextAreaFor(model => model.case_.FinishingDescription, new { maxlength = "300", style = "min-width: 460px; min-height: 100px;" })
                         }
                         else
                         {
-                            @Html.TextAreaFor(model => model.case_.FinishingDescription, new { maxlength = "300", style="min-width: 400px; min-height: 150px" })
+                            @Html.TextAreaFor(model => model.case_.FinishingDescription, new { maxlength = "300", style="min-width: 460px; min-height: 100px;" })
                         }
                     </td>
                 </tr>
