#261427 - Data privacy deletion - Warning message

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/DataPrivacy.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/DataPrivacy.cshtml
@@ -340,7 +340,7 @@
             },
             translations:
             {
-                dataPrivacyConfirmation: '@Translation.GetForJS("Är du säker på att du vill ersätta informationen i utvalda ärenden?")',
+                dataPrivacyConfirmation: '@Translation.GetForJS("{0} ärenden kommer att påverkas")' +'.<br>' + '@Translation.GetForJS("Är du säker på att du vill ersätta informationen i utvalda ärenden?")',
                 dataPrivacyDeletionConfirmation: '@Translation.GetForJS("{0} ärenden kommer att raderas")' +'.<br>' + '@Translation.GetForJS("Är du säker på att du vill radera dessa ärenden")' + '?',
                 operationSuccessMessage: '@Translation.GetForJS("Klar")',
                 createNewFavorite: '@Translation.GetForJS("Skapa ny")',
