#247397 - Task - Case - Rich text formating - Selfservice

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_CaseLogNote.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_CaseLogNote.cshtml
@@ -20,7 +20,7 @@
 
     MvcHtmlString FormatLogText(CaseLogModel logItem)
     {
-        var logText = GetLogText(logItem).AddCharacterInParts(70, Environment.NewLine, Environment.NewLine);
+        var logText = GetLogText(logItem);
 
 
 
