--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -23,6 +23,7 @@
 
 <link href="~/Content/css/summernote.css" rel="stylesheet" />
 <script src="~/Content/summernote-0.8.18/summernote.js"></script>
+<script src="~/Content/summernote-0.8.18/lang/summernote-sv-SE.js"></script>
 
 @if (Model.case_ != null)
 {
@@ -2488,18 +2489,23 @@
 <script>
 
 @{
-var descriptionSize = Model.caseFieldSettings.getFieldSize(GlobalEnums.TranslationCaseFields.Description.ToString());
+    var descriptionSize = Model.caseFieldSettings.getFieldSize(GlobalEnums.TranslationCaseFields.Description.ToString());
     if (descriptionSize == 0)
     {
         descriptionSize = 5;
+
     }
+    var langChosen = SessionFacade.CurrentLanguageCode == "SV" ? "sv-SE" : "en-US";
+
 }
+
+
 
     //Declare height
     let height = 100;
 
-
     let summerNoteInternalConfig = {
+        lang: '@langChosen',
         placeholder: '',
         dialogsFade: true,
         tabsize: 1,
@@ -2536,6 +2542,7 @@ var descriptionSize = Model.caseFieldSettings.getFieldSize(GlobalEnums.Translati
     }
 
     let summerNoteExternalConfig = {
+        lang: '@langChosen',
         placeholder: '',
         dialogsFade: true,
         tabsize: 1,
@@ -2575,7 +2582,7 @@ var descriptionSize = Model.caseFieldSettings.getFieldSize(GlobalEnums.Translati
                     }
 
 
-                }
+                } 
                 validator.element($('.summernoteexternal'));
 
             }
@@ -2583,6 +2590,7 @@ var descriptionSize = Model.caseFieldSettings.getFieldSize(GlobalEnums.Translati
     }
 
     let summerNoteDescConfig = {
+        lang: '@langChosen',
         placeholder: '',
         dialogsFade: true,
         tabsize: 1,
@@ -2592,7 +2600,7 @@ var descriptionSize = Model.caseFieldSettings.getFieldSize(GlobalEnums.Translati
         disableResizeEditor: false,
         height: @descriptionSize * 25,
         popover: {
-            image: [ 
+            image: [
                 ['remove', ['removeMedia']],
             ],
         },
@@ -2640,7 +2648,7 @@ var descriptionSize = Model.caseFieldSettings.getFieldSize(GlobalEnums.Translati
         if (typeof textInternalOuter != 'undefined') {
             new ResizeObserver(sizeChanged).observe(textInternalOuter)
         }
-            
+
 
         //Loop all .summernote to try to find the disabled ones
         $(".summernoteinternal").each(function () {
