--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_Communication.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_Communication.cshtml
@@ -18,6 +18,7 @@
 
 <link href="~/Content/css/summernote.css" rel="stylesheet" />
 <script src="~/Content/summernote-0.8.18/summernote.js"></script>
+<script src="~/Content/summernote-0.8.18/lang/summernote-sv-SE.js"></script>
 
 <div id="communicationPanel" class="siteCom">
     <div id="btnOpenLog" class="mapButtonclose mapButton @expand"><span class="glyphicon glyphicon-remove"></span></div>
@@ -93,8 +94,11 @@
 </div>
 
 <script>
-
+    @{ 
+        var langChosen = SessionFacade.CurrentLanguageId == 1 ? "sv-SE" : "en-US";
+    }
     let summerNoteCommentConfig = {
+        lang: '@langChosen',
         placeholder: '',
         dialogsFade: true,
         tabsize: 1,
