--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseHistory.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseHistory.cshtml
@@ -29,29 +29,36 @@
                 @for (var i = 0; i < histories.Length; i++)
                 {
                     var current = histories[i];
+                    //Check for "fake" merged emails.
+                    var showMe = true;
+                    foreach (var l in current.Emaillogs)
+                    {
+                        if(String.IsNullOrEmpty(l.Body) && l.MailId == 18)
+                        {
+                            showMe = false;
+                        }
+                    }
                     var previous = i < histories.Length - 1 ? histories[i + 1] : null;
                     var hasChanged = current.GetCaseHistoryInfo(previous, Model.CaseCustomerId ?? 0, Model.DepartmentFilterFormat, Model.caseFieldSettings, Model.OutFormatter);
-                    if (!MvcHtmlString.IsNullOrEmpty(hasChanged))
+                    if (!MvcHtmlString.IsNullOrEmpty(hasChanged) || (current.Emaillogs != null && current.Emaillogs.Count > 0) && showMe)
                     {
-                        <tr>
-                            <td style="width: 15%">
-                                @{ current.CreatedDate = CreateDateTimeToUserTimeZone(current.CreatedDate); }
-                                @Html.DisplayFor(m => current.CreatedDate, "DateAndTime")
-                            </td>
-                            <td style="width:15%">@current.CreatedByUser</td>
-                            <td style="width:45%">
-                                <table class="tableintable">
-                                    @current.GetCaseHistoryInfo(previous, Model.CaseCustomerId ?? 0, Model.DepartmentFilterFormat, Model.caseFieldSettings, Model.OutFormatter)
-                                </table>
-                            </td>
-                            <td style="width:25%">
-                                @if (current.Emaillogs != null)
-                                {
+                            <tr>
+                                <td style="width: 15%">
+                                    @{ current.CreatedDate = CreateDateTimeToUserTimeZone(current.CreatedDate); }
+                                    @Html.DisplayFor(m => current.CreatedDate, "DateAndTime")
+                                </td>
+                                <td style="width:15%">@current.CreatedByUser</td>
+                                <td style="width:45%">
+                                    <table class="tableintable">
+                                        @hasChanged
+                                    </table>
+                                </td>
+                                <td style="width:25%">
+                                    @if (current.Emaillogs != null)
+                                    {
 
-                                    <div>
-                                        @foreach (var l in current.Emaillogs)
-                                        {
-                                            if (!string.IsNullOrEmpty(l.ResponseMessage))
+                                        <div>
+                                            @foreach (var l in current.Emaillogs)
                                             {
                                                 var emails = new List<string>();
                                                 {
@@ -68,17 +75,17 @@
                                                 {
                                                     <p>@e (@l.MailId.GetMailTemplateName(Model.MailTemplates))</p>
                                                 }
+
+
                                             }
+                                        </div>
+                                    }
+                                </td>
+                            </tr>
+                        }
 
-                                        }
-                                    </div>
-                                }
-                            </td>
-                        </tr>
                     }
-
-                }
-            </tbody>
+                </tbody>
         }
         </table>
     </div>
