#264331 - Bug - Remove asterisk in Bulk edit popup next to mandatory field

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/ModalDialogs/_BulkCaseEdit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/ModalDialogs/_BulkCaseEdit.cshtml
@@ -239,11 +239,7 @@
                 {
                     <tr style="@Model.GetFieldStyle(GlobalEnums.TranslationCaseFields.FinishingDescription, CaseSolutionFields.FinishingDescription)">
                         <td>
-                            @CaseFieldCaption(GlobalEnums.TranslationCaseFields.FinishingDescription, "Avslutsbeskrivning")
-                            @if (Model.caseFieldSettings.getCaseSettingsValue(GlobalEnums.TranslationCaseFields.FinishingDescription.ToString()).Required == 1)
-                            {
-                                <span class="mandatorystar">*</span>
-                            }
+                            @Translation.GetCoreTextTranslation("Avslutsbeskrivning")
                         </td>
                         <td>
                             @if (!Model.IsReadOnly(GlobalEnums.TranslationCaseFields.FinishingDescription, CaseSolutionFields.FinishingDescription) && !readonlyMode)
