#260853 - Bug - Annat - Wrong version is shown in About information

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/About/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/About/Index.cshtml
@@ -25,7 +25,7 @@
                                         DH Helpdesk is a flexible and easy-to-use case management system. 
                                     </p>
                                     <p>
-                                        Version @ViewBag.VersionNum
+                                        Version @ApplicationFacade.Version
                                     </p>
                                 </div>
                             </div>
