--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/EditLog.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/EditLog.cshtml
@@ -99,6 +99,11 @@
                 $('.summernoteinternal').val($('.summernoteinternal').summernote('isEmpty') ? "" : contents);
 
                 validator.element($('.summernoteinternal'));
+            },
+            onPaste: function (e) {
+                var bufferText = ((e.originalEvent || e).clipboardData || window.clipboardData).getData('Text');
+                e.preventDefault();
+                document.execCommand('insertText', false, bufferText);
             }
         }
     }
@@ -118,6 +123,11 @@
 
                 validator.element($('.summernoteexternal'));
 
+            },
+            onPaste: function (e) {
+                var bufferText = ((e.originalEvent || e).clipboardData || window.clipboardData).getData('Text');
+                e.preventDefault();
+                document.execCommand('insertText', false, bufferText);
             }
         }
     }
