--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/NewCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/NewCase.cshtml
@@ -1616,6 +1616,11 @@
                 $('.summernotedesc').val($('.summernotedesc').summernote('isEmpty') ? "" : contents);
 
                 validator.element($('.summernotedesc'));
+            },
+            onPaste: function (e) {
+                var bufferText = ((e.originalEvent || e).clipboardData || window.clipboardData).getData('Text');
+                e.preventDefault();
+                document.execCommand('insertText', false, bufferText);
             }
         }
     }
